[package]
name = "window-open-chrome-instanceof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = {version = "0.3.56", features = ["HtmlElement", "HtmlDocument"] }
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1.7"
[lib]
crate-type = ["cdylib", "rlib"]
